unpackaged/main/default/objects/nbavs__Call_Queue__c/nbavs__Call_Queue__c.object-meta.xml
<CustomObject>
    <label>Call Queue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>