unpackaged/main/default/objects/nbavs__Call_Queue__c/fields/nbavs__Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Destination_Number__c</fullName>
    <externalId>true</externalId>
    <label>Destination Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>