unpackaged/main/default/objects/nbavs__Call_Queue__c/fields/nbavs__Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Id__c</fullName>
    <externalId>true</externalId>
    <label>Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>