unpackaged/main/default/objects/nbavs__Call_Queue__c/fields/nbavs__Routing_Policy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Routing_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routing Policy</label>
    <referenceTo>nbavs__CallFlow__c</referenceTo>
    <relationshipLabel>Routing Policy</relationshipLabel>
    <relationshipName>Call_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>